# similarnames

./: LICENSE  README.md  README.rst  pyproject.toml
similarnames/: __init__.py  similarnames.py
tests/: test_similarnames.py
