[tool.poetry]
name = "similarnames"
version = "0.1.7"
description = "Library for Standardizing names from a Pandas dataframe"
authors = ["paulobrunheroto <paulobrunheroto@hotmail.com>"]

license = "MIT"
readme = "README.md"
homepage = 'https://github.com/paulobrunheroto/similarnames'
repository = 'https://github.com/paulobrunheroto/similarnames'

[tool.poetry.dependencies]
python = "^3.7"
unidecode = "^1.3.4"
nltk = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
